# nixiewatch

./: Cargo.toml  README.md
.cargo/: config
hw/: MCU.kicad_sch  Nixiewatch-cache.lib  Nixiewatch.kicad_pcb  Nixiewatch.kicad_pro  Nixiewatch.kicad_sch  PSU.kicad_sch  fp-info-cache  nixie.kicad_sch  sym-lib-table
hw/jlcpcb/: project.db
hw/jlcpcb/assembly/: BOM-Nixiewatch.csv  POS-Nixiewatch.csv
hw/jlcpcb/gerber/: Nixiewatch-CuBottom.gbr  Nixiewatch-CuIn1.gbr  Nixiewatch-CuIn2.gbr  Nixiewatch-CuTop.gbr  Nixiewatch-EdgeCuts.gbr  Nixiewatch-MaskBottom.gbr  Nixiewatch-MaskTop.gbr  Nixiewatch-NPTH.drl  Nixiewatch-PTH.drl  Nixiewatch-PasteBottom.gbr  Nixiewatch-PasteTop.gbr  Nixiewatch-SilkBottom.gbr  Nixiewatch-SilkTop.gbr
src/: main.rs  nixie_segment.rs  usb_serial.rs
sw/: memory.x  openocd.gdb
sw/src/: main.rs  nixie_segment.rs  usb_serial.rs
