[package]
authors = ["riktw"]
edition = "2018"
readme = "README.md"
name = "nixiewatch"
version = "0.1.0"

[dependencies]
bare-metal = { version = "1.0.0"}
cortex-m = "0.7"
cortex-m-rt = "0.6.10"
#cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = { version = "0.2", features = ["unproven"] }
stm32f0 = "0.13"
stm32-usbd = { version = "0.6.0"}
usb-device = "0.2.7"
usbd-serial = "0.1.1"
numtoa = "0.2.3"
mpu6050 = "0.1.4"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"
stm32f0xx-hal = {version = "0.17.1", features = ["rt", "stm32f042", "stm32-usbd"]}

# this lets you use `cargo fix`!
[[bin]]
name = "nixiewatch"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
